[package]
name = "tfchain_exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
vendored = ["openssl"]

[dependencies]
tfchain_client = { git = "https://github.com/threefoldtech/tfchain_client", branch = "main" }
prometheus = "0.13"
chrono = "0.4"
rouille = "3.5"
openssl = { version = "0.10", optional = true, features = ["vendored"] }
pretty_env_logger = "0.4"

[dependencies.sp-core]
version = "3.0.0"

[patch.'https://github.com/paritytech/substrate']
metadata = { package = "frame-metadata", version = "13.0.0" }
sp-version = { version = "3.0.0" }
balances = { package = "pallet-balances", version = "3.0.0" }
sc-rpc-api = "0.9.0"
sp-core = "3.0.0"
sp-runtime = "3.0.0"
system = { package = "frame-system", version = "3.0.0" }
support = { package = "frame-support", version = "3.0.0" }

